syntax = "proto3";

package blog;

option go_package = "./blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string first_name =3;
  string last_name = 4;
  string title = 5;
  string content = 6;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}
message UpdateBlogResponse {
  Blog blog = 1;
}
message DeleteBlogRequest {
  string blog_id = 1;
}
message DeleteBlogResponse {
  string blog_id = 1;
}
message ListBlogRequest{

}
message ListBlogResponse{
  Blog blog =1;
}
message ListBlogRequestByUserId{
  string user_id =1;
}
message ListBlogResponseByUserId{
  Blog blog =1;
}
service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse);
  // return not found if not found
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
  // returns not found
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
  // returns not found
  rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);
  rpc ListBlogByUserId(ListBlogRequestByUserId) returns (stream ListBlogResponseByUserId);
}
